--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,10 @@
 {
-  "name": "STRL Dev",
-  "description": "Chrome Extension to make the life of STRL devs easier.",
-  "version": "1.0",
-  "manifest_version": 3
+	"name": "STRL Dev",
+	"description": "Chrome Extension to make the life of STRL devs easier.",
+	"version": "1.0",
+	"manifest_version": 3,
+	"action": {
+		"default_popup": "index.html"
+	},
+	"options_page": "options.html"
 }
