Added bookmark functionality to the extension

--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,10 @@
 	"version": "1.0",
 	"manifest_version": 3,
 	"action": {
-		"default_popup": "index.html"
+		"default_popup": "popup.html"
 	},
+	"permissions": [
+		"storage"
+	],
 	"options_page": "options.html"
 }
